; ModuleID = '/home/carl/AnghaBench/linux/net/openvswitch/extr_actions.c_process_deferred_actions.c'
source_filename = "/home/carl/AnghaBench/linux/net/openvswitch/extr_actions.c_process_deferred_actions.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.datapath = type { i32 }
%struct.action_fifo = type { i32 }
%struct.deferred_action = type { i32, %struct.nlattr*, %struct.sw_flow_key, %struct.sk_buff* }
%struct.nlattr = type { i32 }
%struct.sw_flow_key = type { i32 }
%struct.sk_buff = type { i32 }

@action_fifos = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.datapath*)* @process_deferred_actions to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @process_deferred_actions(%struct.datapath* %0) #0 {
  %2 = alloca %struct.datapath*, align 8
  %3 = alloca %struct.action_fifo*, align 8
  %4 = alloca %struct.deferred_action*, align 8
  %5 = alloca %struct.sk_buff*, align 8
  %6 = alloca %struct.sw_flow_key*, align 8
  %7 = alloca %struct.nlattr*, align 8
  %8 = alloca i32, align 4
  store %struct.datapath* %0, %struct.datapath** %2, align 8
  %9 = load i32, i32* @action_fifos, align 4
  %10 = call %struct.action_fifo* @this_cpu_ptr(i32 %9)
  store %struct.action_fifo* %10, %struct.action_fifo** %3, align 8
  %11 = load %struct.action_fifo*, %struct.action_fifo** %3, align 8
  %12 = call i64 @action_fifo_is_empty(%struct.action_fifo* %11)
  %13 = icmp ne i64 %12, 0
  br i1 %13, label %14, label %15

14:                                               ; preds = %1
  br label %52

15:                                               ; preds = %1
  br label %16

16:                                               ; preds = %44, %15
  %17 = load %struct.action_fifo*, %struct.action_fifo** %3, align 8
  %18 = call %struct.deferred_action* @action_fifo_get(%struct.action_fifo* %17)
  store %struct.deferred_action* %18, %struct.deferred_action** %4, align 8
  %19 = load %struct.deferred_action*, %struct.deferred_action** %4, align 8
  %20 = getelementptr inbounds %struct.deferred_action, %struct.deferred_action* %19, i32 0, i32 3
  %21 = load %struct.sk_buff*, %struct.sk_buff** %20, align 8
  store %struct.sk_buff* %21, %struct.sk_buff** %5, align 8
  %22 = load %struct.deferred_action*, %struct.deferred_action** %4, align 8
  %23 = getelementptr inbounds %struct.deferred_action, %struct.deferred_action* %22, i32 0, i32 2
  store %struct.sw_flow_key* %23, %struct.sw_flow_key** %6, align 8
  %24 = load %struct.deferred_action*, %struct.deferred_action** %4, align 8
  %25 = getelementptr inbounds %struct.deferred_action, %struct.deferred_action* %24, i32 0, i32 1
  %26 = load %struct.nlattr*, %struct.nlattr** %25, align 8
  store %struct.nlattr* %26, %struct.nlattr** %7, align 8
  %27 = load %struct.deferred_action*, %struct.deferred_action** %4, align 8
  %28 = getelementptr inbounds %struct.deferred_action, %struct.deferred_action* %27, i32 0, i32 0
  %29 = load i32, i32* %28, align 8
  store i32 %29, i32* %8, align 4
  %30 = load %struct.nlattr*, %struct.nlattr** %7, align 8
  %31 = icmp ne %struct.nlattr* %30, null
  br i1 %31, label %32, label %39

32:                                               ; preds = %16
  %33 = load %struct.datapath*, %struct.datapath** %2, align 8
  %34 = load %struct.sk_buff*, %struct.sk_buff** %5, align 8
  %35 = load %struct.sw_flow_key*, %struct.sw_flow_key** %6, align 8
  %36 = load %struct.nlattr*, %struct.nlattr** %7, align 8
  %37 = load i32, i32* %8, align 4
  %38 = call i32 @do_execute_actions(%struct.datapath* %33, %struct.sk_buff* %34, %struct.sw_flow_key* %35, %struct.nlattr* %36, i32 %37)
  br label %43

39:                                               ; preds = %16
  %40 = load %struct.sk_buff*, %struct.sk_buff** %5, align 8
  %41 = load %struct.sw_flow_key*, %struct.sw_flow_key** %6, align 8
  %42 = call i32 @ovs_dp_process_packet(%struct.sk_buff* %40, %struct.sw_flow_key* %41)
  br label %43

43:                                               ; preds = %39, %32
  br label %44

44:                                               ; preds = %43
  %45 = load %struct.action_fifo*, %struct.action_fifo** %3, align 8
  %46 = call i64 @action_fifo_is_empty(%struct.action_fifo* %45)
  %47 = icmp ne i64 %46, 0
  %48 = xor i1 %47, true
  br i1 %48, label %16, label %49

49:                                               ; preds = %44
  %50 = load %struct.action_fifo*, %struct.action_fifo** %3, align 8
  %51 = call i32 @action_fifo_init(%struct.action_fifo* %50)
  br label %52

52:                                               ; preds = %49, %14
  ret void
}

declare dso_local %struct.action_fifo* @this_cpu_ptr(i32) #1

declare dso_local i64 @action_fifo_is_empty(%struct.action_fifo*) #1

declare dso_local %struct.deferred_action* @action_fifo_get(%struct.action_fifo*) #1

declare dso_local i32 @do_execute_actions(%struct.datapath*, %struct.sk_buff*, %struct.sw_flow_key*, %struct.nlattr*, i32) #1

declare dso_local i32 @ovs_dp_process_packet(%struct.sk_buff*, %struct.sw_flow_key*) #1

declare dso_local i32 @action_fifo_init(%struct.action_fifo*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
